--- a/package.json
+++ b/package.json
@@ -14,24 +14,38 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "expo-asset": "~8.3.2",
+    "expo-constants": "~11.0.1",
+    "expo-linking": "~2.3.1",
+    "expo-splash-screen": "~0.11.2",
+    "expo-web-browser": "~9.2.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/utils": "^4.11.2",
+    "@react-native-async-storage/async-storage": "^1.15.6",
+    "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
-    "expo-asset": "~8.3.2",
-    "expo-constants": "~11.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
-    "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
+    "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^4.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-otp-textinput": "0.0.8",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-screens": "^3.5.0",
+    "react-native-switch": "^2.0.0",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
