--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.3"
-        minSdkVersion = 21
+        minSdkVersion = 22
         compileSdkVersion = 30
         targetSdkVersion = 30
     }
@@ -22,6 +22,9 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        flatDir{
+            dirs "$rootDir/libs"
+        }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
