--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "expo-asset": "~8.3.2",
-    "expo-constants": "~11.0.1",
-    "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-web-browser": "~9.2.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/utils": "^4.11.2",
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/cli": "^6.1.0",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-asset": "~8.3.2",
+    "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-linking": "~2.3.1",
     "expo-secure-store": "^10.2.0",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
+    "expo-web-browser": "~9.2.0",
     "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -44,9 +46,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-switch": "^2.0.0",
-    "react-native-web": "^0.17.1",
-    "expo-updates": "~0.8.1",
-    "react-native-unimodules": "0.14.10"
+    "react-native-unimodules": "0.14.10",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
