--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -184,24 +185,11 @@ android {
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
-    def room_version = "2.3.0"
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation(name:'tonelisten-release', ext:'aar')
 
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation("com.google.guava:guava:30.1.1-android")
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
-    implementation 'com.google.code.gson:gson:2.8.8'
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-guava:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
+    implementation 'com.android.support:multidex:1.0.3'
+    //noinspection GradleDynamicVersion
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.github.The-TONE-Knows-Inc:framework-core-tone-android:1.8'
 
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
